crates/lang-parse/tests/snapshots/parser__parser_single trailing expr.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x49bbd8162180fd7b",
        output_hash: "0xd244bf800fe84b6c",
        tree: (
            span: (
                start: 0,
                end: 68,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 68,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Workbench((
                        span: (
                            start: 0,
                            end: 68,
                        ),
                        keyword_span: (
                            start: 4,
                            end: 8,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        doc: (
                            span: (
                                start: 0,
                                end: 68,
                            ),
                            lines: [],
                        ),
                        kind: Part,
                        attr: ([]),
                        vis: Some((
                            span: (
                                start: 0,
                                end: 3,
                            ),
                            value: Public,
                        )),
                        id: (
                            span: (
                                start: 9,
                                end: 10,
                            ),
                            name: "A",
                        ),
                        parameters: (
                            span: (
                                start: 11,
                                end: 11,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            parameters: [],
                        ),
                        body: (
                            span: (
                                start: 13,
                                end: 68,
                            ),
                            statements: (
                                span: (
                                    start: 14,
                                    end: 67,
                                ),
                                extras: (
                                    leading: ([
                                        Whitespace(("\n        ")),
                                    ]),
                                    trailing: ([]),
                                ),
                                statements: [
                                    (Expression((
                                        span: (
                                            start: 23,
                                            end: 61,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        attr: ([]),
                                        expr: ElementAccess((
                                            span: (
                                                start: 23,
                                                end: 61,
                                            ),
                                            expr: Body((
                                                span: (
                                                    start: 23,
                                                    end: 52,
                                                ),
                                                statements: (
                                                    span: (
                                                        start: 24,
                                                        end: 51,
                                                    ),
                                                    extras: (
                                                        leading: ([
                                                            Whitespace(("\n            ")),
                                                        ]),
                                                        trailing: ([]),
                                                    ),
                                                    statements: [
                                                        (Expression((
                                                            span: (
                                                                start: 37,
                                                                end: 41,
                                                            ),
                                                            extras: (
                                                                leading: ([]),
                                                                trailing: ([]),
                                                            ),
                                                            attr: ([]),
                                                            expr: Call((
                                                                span: (
                                                                    start: 37,
                                                                    end: 41,
                                                                ),
                                                                extras: (
                                                                    leading: ([]),
                                                                    trailing: ([]),
                                                                ),
                                                                path: (
                                                                    span: (
                                                                        start: 37,
                                                                        end: 38,
                                                                    ),
                                                                    extras: (
                                                                        leading: ([]),
                                                                        trailing: ([]),
                                                                    ),
                                                                    prefix: None,
                                                                    parts: [
                                                                        (
                                                                            span: (
                                                                                start: 37,
                                                                                end: 38,
                                                                            ),
                                                                            name: "B",
                                                                        ),
                                                                    ],
                                                                ),
                                                                arguments: (
                                                                    span: (
                                                                        start: 39,
                                                                        end: 40,
                                                                    ),
                                                                    extras: (
                                                                        leading: ([]),
                                                                        trailing: ([]),
                                                                    ),
                                                                    arguments: [
                                                                        Unnamed((
                                                                            span: (
                                                                                start: 39,
                                                                                end: 40,
                                                                            ),
                                                                            extras: (
                                                                                leading: ([]),
                                                                                trailing: ([]),
                                                                            ),
                                                                            expr: SymbolPath((
                                                                                span: (
                                                                                    start: 39,
                                                                                    end: 40,
                                                                                ),
                                                                                extras: (
                                                                                    leading: ([]),
                                                                                    trailing: ([]),
                                                                                ),
                                                                                prefix: None,
                                                                                parts: [
                                                                                    (
                                                                                        span: (
                                                                                            start: 39,
                                                                                            end: 40,
                                                                                        ),
                                                                                        name: "C",
                                                                                    ),
                                                                                ],
                                                                            )),
                                                                        )),
                                                                    ],
                                                                ),
                                                            )),
                                                        )), ([
                                                            Whitespace(("\n        ")),
                                                        ])),
                                                    ],
                                                    tail: None,
                                                ),
                                            )),
                                            element_chain: [
                                                (
                                                    span: (
                                                        start: 52,
                                                        end: 61,
                                                    ),
                                                    extras: (
                                                        leading: ([]),
                                                        trailing: ([]),
                                                    ),
                                                    inner: Method((
                                                        span: (
                                                            start: 53,
                                                            end: 61,
                                                        ),
                                                        extras: (
                                                            leading: ([]),
                                                            trailing: ([]),
                                                        ),
                                                        path: (
                                                            span: (
                                                                start: 53,
                                                                end: 58,
                                                            ),
                                                            extras: (
                                                                leading: ([]),
                                                                trailing: ([]),
                                                            ),
                                                            prefix: None,
                                                            parts: [
                                                                (
                                                                    span: (
                                                                        start: 53,
                                                                        end: 58,
                                                                    ),
                                                                    name: "align",
                                                                ),
                                                            ],
                                                        ),
                                                        arguments: (
                                                            span: (
                                                                start: 59,
                                                                end: 60,
                                                            ),
                                                            extras: (
                                                                leading: ([]),
                                                                trailing: ([]),
                                                            ),
                                                            arguments: [
                                                                Unnamed((
                                                                    span: (
                                                                        start: 59,
                                                                        end: 60,
                                                                    ),
                                                                    extras: (
                                                                        leading: ([]),
                                                                        trailing: ([]),
                                                                    ),
                                                                    expr: SymbolPath((
                                                                        span: (
                                                                            start: 59,
                                                                            end: 60,
                                                                        ),
                                                                        extras: (
                                                                            leading: ([]),
                                                                            trailing: ([]),
                                                                        ),
                                                                        prefix: None,
                                                                        parts: [
                                                                            (
                                                                                span: (
                                                                                    start: 59,
                                                                                    end: 60,
                                                                                ),
                                                                                name: "D",
                                                                            ),
                                                                        ],
                                                                    )),
                                                                )),
                                                            ],
                                                        ),
                                                    )),
                                                ),
                                            ],
                                        )),
                                    )), ([
                                        Whitespace(("\n    ")),
                                    ])),
                                ],
                                tail: None,
                            ),
                        ),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
