crates/lang-parse/tests/snapshots/parser__parser_sketch.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..58,
            statements: StatementList {
                span: 0..58,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [
                    (
                        Workbench(
                            Workbench {
                                span: 0..58,
                                keyword_span: 0..6,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                doc: DocBlock {
                                    span: 0..58,
                                    lines: [],
                                },
                                kind: Sketch,
                                attr: Attributes(
                                    [],
                                ),
                                vis: None,
                                id: Identifier {
                                    span: 7..12,
                                    name: "Wheel",
                                },
                                parameters: ParameterList {
                                    span: 13..27,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    parameters: [
                                        Parameter {
                                            span: 13..27,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            doc: DocBlock {
                                                span: 13..13,
                                                lines: [],
                                            },
                                            attr: Attributes(
                                                [],
                                            ),
                                            id: Identifier {
                                                span: 13..19,
                                                name: "radius",
                                            },
                                            ty: Some(
                                                Single(
                                                    SingleType {
                                                        span: 21..27,
                                                        name: "Length",
                                                    },
                                                ),
                                            ),
                                            default: None,
                                        },
                                    ],
                                },
                                body: Body {
                                    span: 29..58,
                                    statements: StatementList {
                                        span: 30..57,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        statements: [
                                            (
                                                Expression(
                                                    ExpressionStatement {
                                                        span: 30..56,
                                                        extras: ItemExtras {
                                                            leading: LeadingExtras(
                                                                [],
                                                            ),
                                                            trailing: TrailingExtras(
                                                                [],
                                                            ),
                                                        },
                                                        attr: Attributes(
                                                            [],
                                                        ),
                                                        expr: Call(
                                                            Call {
                                                                span: 30..56,
                                                                extras: ItemExtras {
                                                                    leading: LeadingExtras(
                                                                        [],
                                                                    ),
                                                                    trailing: TrailingExtras(
                                                                        [],
                                                                    ),
                                                                },
                                                                name: QualifiedName {
                                                                    span: 30..48,
                                                                    extras: ItemExtras {
                                                                        leading: LeadingExtras(
                                                                            [],
                                                                        ),
                                                                        trailing: TrailingExtras(
                                                                            [],
                                                                        ),
                                                                    },
                                                                    parts: [
                                                                        Identifier {
                                                                            span: 30..33,
                                                                            name: "std",
                                                                        },
                                                                        Identifier {
                                                                            span: 35..40,
                                                                            name: "geo2d",
                                                                        },
                                                                        Identifier {
                                                                            span: 42..48,
                                                                            name: "Circle",
                                                                        },
                                                                    ],
                                                                },
                                                                arguments: ArgumentList {
                                                                    span: 49..55,
                                                                    extras: ItemExtras {
                                                                        leading: LeadingExtras(
                                                                            [],
                                                                        ),
                                                                        trailing: TrailingExtras(
                                                                            [],
                                                                        ),
                                                                    },
                                                                    arguments: [
                                                                        Unnamed(
                                                                            UnnamedArgument {
                                                                                span: 49..55,
                                                                                extras: ItemExtras {
                                                                                    leading: LeadingExtras(
                                                                                        [],
                                                                                    ),
                                                                                    trailing: TrailingExtras(
                                                                                        [],
                                                                                    ),
                                                                                },
                                                                                expr: QualifiedName(
                                                                                    QualifiedName {
                                                                                        span: 49..55,
                                                                                        extras: ItemExtras {
                                                                                            leading: LeadingExtras(
                                                                                                [],
                                                                                            ),
                                                                                            trailing: TrailingExtras(
                                                                                                [],
                                                                                            ),
                                                                                        },
                                                                                        parts: [
                                                                                            Identifier {
                                                                                                span: 49..55,
                                                                                                name: "radius",
                                                                                            },
                                                                                        ],
                                                                                    },
                                                                                ),
                                                                            },
                                                                        ),
                                                                    ],
                                                                },
                                                            },
                                                        ),
                                                    },
                                                ),
                                                TrailingExtras(
                                                    [],
                                                ),
                                            ),
                                        ],
                                        tail: None,
                                    },
                                },
                            },
                        ),
                        TrailingExtras(
                            [],
                        ),
                    ),
                ],
                tail: None,
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
