crates/lang-parse/tests/snapshots/parser__parser_symbol path.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xd827fd3c0dfd76e5",
        output_hash: "0x8bf1aeb3745155b7",
        tree: (
            span: (
                start: 0,
                end: 8,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 8,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 8,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: SymbolPath((
                        span: (
                            start: 0,
                            end: 8,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        prefix: None,
                        parts: [
                            (
                                span: (
                                    start: 0,
                                    end: 3,
                                ),
                                name: "foo",
                            ),
                            (
                                span: (
                                    start: 5,
                                    end: 8,
                                ),
                                name: "bar",
                            ),
                        ],
                    )),
                )),
            ),
        ),
    ),
)
---
