crates/lang-parse/tests/snapshots/parser__parser_trailing dot.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x46b4e37f0e242294",
        output_hash: "0xab5b9c17a1e2e74c",
        tree: (
            span: (
                start: 0,
                end: 2,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 2,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 2,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Literal((
                        span: (
                            start: 0,
                            end: 2,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        literal: Float((
                            span: (
                                start: 0,
                                end: 2,
                            ),
                            value: "1.",
                        )),
                    )),
                )),
            ),
        ),
    ),
)
---
